MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/Relix_KYC_Document__c.object-meta.xml
<CustomObject>
    <description>One document that Relix (Dalil) listed on a Relix KYC Case: its reference, what it is, whether Salesforce downloads it, and where the file was filed. Created by RelixResultService; downloaded one at a time by RelixDocumentBatch. Holds no file content itself. Added 25 Sep 2026 (Relix plan R3/R5).</description>
    <label>Relix KYC Document</label>
    <nameField>
        <displayFormat>RLXD-{00000}</displayFormat>
        <label>Relix Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relix KYC Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>