MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <description>documentContentHash from Relix, compared after download.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>