MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Document_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Ref_Id__c</fullName>
    <description>Relix documentRefId (API 3.2 documents[], 3.3 documents[], certificates.*).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Ref Id</label>
    <length>120</length>
    <type>Text</type>
</CustomField>