MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Downloaded_At__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_At__c</fullName>
    <description>When the file was saved in Salesforce.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Downloaded At</label>
    <type>DateTime</type>
</CustomField>