MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>documentUploadedName as the buyer uploaded it, for support. Never used to decide what a document is.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>