MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Last_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Last_Error_Code__c</fullName>
    <description>Relix error code or our own (timeout, hash_mismatch, too_large, ...).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Error Code</label>
    <length>60</length>
    <type>Text</type>
</CustomField>