MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Mime_Type__c.field-meta.xml
<CustomField>
    <fullName>Mime_Type__c</fullName>
    <description>MIME type as listed by Relix.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>MIME Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>