MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Relix_KYC_Case__c.field-meta.xml
<CustomField>
    <fullName>Relix_KYC_Case__c</fullName>
    <description>The Relix case that listed this document.</description>
    <label>Relix KYC Case</label>
    <referenceTo>Relix_KYC_Case__c</referenceTo>
    <relationshipLabel>Relix Documents</relationshipLabel>
    <relationshipName>Relix_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>