MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Relix_Type__c.field-meta.xml
<CustomField>
    <fullName>Relix_Type__c</fullName>
    <description>Relix type (e.g. passport_image, uaekyc_certificate), documentName for an upload, or KYC_CERTIFICATE / CASE_CERTIFICATE.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relix Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>