MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Size_Bytes__c.field-meta.xml
<CustomField>
    <fullName>Size_Bytes__c</fullName>
    <description>documentSize / byteSize as listed by Relix; checked against the cap before download.</description>
    <label>Size (bytes)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>