MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Target_Document__c.field-meta.xml
<CustomField>
    <fullName>Target_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The MODON Documents__c checklist row the file was filed on, if any.</description>
    <label>Target Document</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Relix KYC Documents</relationshipLabel>
    <relationshipName>Relix_KYC_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>