MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Target_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Name__c</fullName>
    <description>MODON Documents__c row name this document is filed on (from Relix_Document_Map__mdt); blank = filed on the Relix case row.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>