MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <description>The person Account, POA Contact or company Account whose checklist row receives the file.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>