MODON MRE BPDEV/force-app/main/default/objects/Relix_KYC_Document__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Case row Id + &quot;|&quot; + Relix documentRefId. Unique, so a document is listed once however often the case is read.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>